deploy/production/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: haole
  labels:
    name: haole
    app.kubernetes.io/part-of: haole
